# magic-brush

./: Cargo.toml  LICENSE  README.md
magic-brush/: Cargo.toml
magic-brush-demo/: .gitignore  Cargo.toml  deno.jsonc  index.css  index.html  index.ts  index.tsx  loader.ts  package.sh
magic-brush-demo/src/: copy.wgsl  lib.rs
magic-brush-demo/ts/components/: bitmap.css  bitmap.tsx  canvas.css  canvas.tsx  graph.css  graph.tsx
magic-brush-demo/ts/types/: dynamic.ts  graph.ts  stamp.ts
magic-brush/examples/: stamp_brush.rs
magic-brush/src/: all.rs  dynamic.rs  graph.rs  input.rs  lib.rs  renderer.rs  utils.rs
magic-brush/src/stamp/: common.wgsl  copy.wgsl  custom.wgsl  mod.rs  vertex.wgsl
magic-brush/src/utils/: graph.rs  lerp.rs  lnag.rs  mod.rs  normalize.rs
